--- a/BingolSinema/Views/Admin/Index.cshtml
+++ b/BingolSinema/Views/Admin/Index.cshtml
@@ -8,6 +8,9 @@
 
 <a href="@Url.Action("FilmEkle", "Admin")" class="btn btn-success">Film Ekle</a>
 <a href="@Url.Action("SeansEkle", "Admin")" class="btn btn-primary">Seans Ekle</a>
+<a href="@Url.Action("SalonEkle", "Admin")" class="btn btn-warning">Salon Ekle</a> <!-- New Button for SalonEkle -->
+<a href="@Url.Action("AdminOl","Admin")" class="btn btn-warning">Admin Ekle</a> <!-- Admin ekleme Butonu -->
+
 
 <h3>Mevcut Filmler</h3>
 <table class="table">
