admin islemleri tamam
sınıflar düzeltildi

--- a/BingolSinema/Views/Admin/AdminOl.cshtml
+++ b/BingolSinema/Views/Admin/AdminOl.cshtml
@@ -1,10 +1,11 @@
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewBag.Title = "Admin Ol";
 }
 
 <style>
     body {
-        background-image: url('~/images/AdminGiris.jpg'); /* Replace with your image URL */
+        background: url('/images/Layout_image.jpg') no-repeat center center fixed;
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
