--- a/BingolSinema/Views/Admin/Giris.cshtml
+++ b/BingolSinema/Views/Admin/Giris.cshtml
@@ -1,15 +1,15 @@
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Yönetici Girişi";
 }
 
 <style>
     body {
-        background-image: url('https://staticb.yolcu360.com/blog/wp-content/uploads/2022/12/08171135/eskisehir-sinema-salonu-1500x500.jpg'); /* Replace with your image URL */
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        color: #fff;
-    }
+            background: url('/images/AdminGiris.jpg');
+            background-size: cover;
+            color: white;
+            
+        }
 
     .login-container {
         background-color: rgba(0, 0, 0, 0.7);
