--- a/BingolSinema/Views/Home/Index.cshtml
+++ b/BingolSinema/Views/Home/Index.cshtml
@@ -3,7 +3,15 @@
 @{
     ViewBag.Title = "Film Seçimi";
 }
-
+<style>
+    body {
+        background: url('/images/HomeIndex.jpg') no-repeat center center fixed;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        color: #fff;
+    }
+</style>
 <h2>Film Seçimi</h2>
 
 <table class="table">
