--- a/BingolSinema/Views/Admin/FilmEkle.cshtml
+++ b/BingolSinema/Views/Admin/FilmEkle.cshtml
@@ -1,6 +1,7 @@
 @model BingolSinema.Models.Film
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewBag.Title = "Film Ekle";
 }
 
@@ -10,6 +11,10 @@
     <div class="form-group">
         <label for="FilmAdi">Film Adı</label>
         <input type="text" class="form-control" id="FilmAdi" name="FilmAdi" required />
+    </div>
+    <div class="form-group">
+        <label for="FilmResimUrl">Film Resim Url'si</label>
+        <input type="text" class="form-control" id="FilmResimUrl" name="FilmResimUrl" required />
     </div>
     <div class="form-group">
         <label for="Yönetmen">Yönetmen</label>
@@ -22,7 +27,10 @@
     <div class="form-group">
         <label for="TurID">Tür</label>
         <select class="form-control" id="TurID" name="TurID">
-            <!-- Tür seçeneklerini buraya ekleyin -->
+            @foreach (var tur in ViewBag.FilmTurler)
+            {
+                <option value="@tur.TurID">@tur.Tur</option>
+            }
         </select>
     </div>
     <button type="submit" class="btn btn-success">Ekle</button>
