--- a/BingolSinema/Views/Admin/SeansEkle.cshtml
+++ b/BingolSinema/Views/Admin/SeansEkle.cshtml
@@ -26,6 +26,10 @@
             }
         </select>
     </div>
+        <div class="form-group">
+        <label for="SeansFiyat"> Bilet Fiyatı</label>
+        <input type="number" class="form-control" id="SeansFiyat" name="SeansFiyat" required />
+    </div>
     <div class="form-group">
         <label for="BaslangicZamani">Başlangıç Zamanı</label>
         <input type="datetime-local" class="form-control" id="BaslangicZamani" name="BaslangicZamani" required />
