--- a/BingolSinema/Views/Shared/_Layout.cshtml
+++ b/BingolSinema/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/BingolSinema.styles.css" asp-append-version="true" />
     <style>
         body {
-            background: url('~/images/Layout_image.jpg') no-repeat center center fixed;
+            background: url('/images/Layout_image.jpg') no-repeat center center fixed;
             /*background-size: cover;
             color: white;
             */
@@ -48,6 +48,15 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Rezervasyonlarim">Rezervasyonlarim</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Giris">Giriş</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="UyeOl">Üye Ol</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
