--- a/BingolSinema/Views/Shared/_AdminLayout.cshtml
+++ b/BingolSinema/Views/Shared/_AdminLayout.cshtml
@@ -15,28 +15,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="Index">Home</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="Index">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="FilmEkle">Add Film</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="FilmEkle">Film Ekle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="SeansEkle">Add Seans</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="SeansEkle">Seans Ekle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="SalonEkle">Add Salon</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="SalonEkle">Salon Ekle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="TurEkle">Add Movie Type</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="TurEkle">Film Türü Ekle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="Raporlar">Reports</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="Raporlar">İstatistikler</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="AdminOl">Register Admin</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="AdminOl">Admin Ekleme</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="Giris">Login</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="Giris">Giriş</a>
                 </li>
             </ul>
         </div>
