--- a/BingolSinema/Views/Admin/UpdateSalon.cshtml
+++ b/BingolSinema/Views/Admin/UpdateSalon.cshtml
@@ -1,12 +1,12 @@
 @model Salon
 
 @{
-    ViewBag.Title = "Update Salon";
+    ViewBag.Title = "Update Hall";
 }
 
-<h2>Update Salon</h2>
+<h2>Update Hall</h2>
 
-<form asp-action="UpdateSalon">
+<form asp-action="UpdateSalon" method="post">
     <div class="form-group">
         <label asp-for="SalonAdi"></label>
         <input asp-for="SalonAdi" class="form-control" />
